removed chartClicked event

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,6 @@
 <div class="chart">
   <div style="display: block">
     <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
-      [legend]="barChartLegend" [chartType]="barChartType"
-      (chartClick)="chartClicked($event)"></canvas>
+      [legend]="barChartLegend" [chartType]="barChartType"></canvas>
   </div>
 </div>
