fixed for mobile display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex">
+<div>
   <div class="container">
     <div class="weather-side">
       <div class="weather-gradient"></div>
@@ -63,11 +63,11 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="chart">
-  <div style="display: block">
-    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
-      [legend]="barChartLegend" [chartType]="barChartType"></canvas>
+  <div class="chart">
+    <div>
+      <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+        [legend]="barChartLegend" [chartType]="barChartType"></canvas>
+    </div>
   </div>
 </div>
+
