--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,6 +43,12 @@ body {
 .chart {
     margin: 100px 300px 300px 300px;
 }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .chart {
+        margin: 565px 0 0 0;
+    }
+  }
 
 .weather-side {
     position: relative;
