fixed for mobile display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,7 @@
     </div>
   </div>
   <div class="chart">
+    <label class="chart-label">Chart is based on data received from API</label>
     <div>
       <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
         [legend]="barChartLegend" [chartType]="barChartType"></canvas>
