--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,6 +43,9 @@ body {
 .chart {
     margin: 100px 300px 300px 300px;
 }
+.chart-label {
+    color: white;
+}
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     .chart {
