--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,13 +16,13 @@
     <div class="info-side">
       <div class="today-info-container">
         <div class="today-info">
-          <div class="precipitation"> <span class="title">PRECIPITATION</span><span class="value">0 %</span>
+          <h5> <span class="cloud">{{weatherForecastData?.list[0]?.weather[0]?.description}}</span>
+            <div class="clear"></div>
+          </h5>
+          <div class="humidity"> <span class="title">Humidity</span><span class="value">{{weatherForecastData?.list[0]?.main?.humidity}} %</span>
             <div class="clear"></div>
           </div>
-          <div class="humidity"> <span class="title">HUMIDITY</span><span class="value">34 %</span>
-            <div class="clear"></div>
-          </div>
-          <div class="wind"> <span class="title">WIND</span><span
+          <div class="wind"> <span class="title">Wind</span><span
               class="value">{{weatherForecastData?.list[0]?.wind?.speed}} km/h</span>
             <div class="clear"></div>
           </div>
