--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,18 +40,24 @@ body {
     padding: 20pt;
 }
 
+.cloud {
+    text-transform: uppercase;
+}
+
 .chart {
     margin: 100px 300px 300px 300px;
 }
+
 .chart-label {
     color: white;
 }
+
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     .chart {
         margin: 565px 0 0 0;
     }
-  }
+}
 
 .weather-side {
     position: relative;
@@ -170,12 +176,14 @@ body {
     border-radius: 10px;
     background: rgb(2, 2, 2);
 }
-.label-chart{
+
+.label-chart {
     list-style-type: none;
     padding: 0;
     margin: 10px 35px;
     border-radius: 10px;
 }
+
 .week-list>li {
     float: left;
     padding: 15px;
