fixed for mobile display

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,6 +46,7 @@ body {
 
 .chart {
     margin: 100px 300px 300px 300px;
+    padding:40px;
 }
 
 .chart-label {
@@ -56,6 +57,7 @@ body {
     /* For mobile phones: */
     .chart {
         margin: 565px 0 0 0;
+        padding:40px
     }
 }
 
