--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,7 +46,7 @@ body {
 
 .chart {
     margin: 100px 300px 300px 300px;
-    padding:40px;
+    padding: 40px;
 }
 
 .chart-label {
@@ -57,7 +57,7 @@ body {
     /* For mobile phones: */
     .chart {
         margin: 565px 0 0 0;
-        padding:40px
+        padding: 40px
     }
 }
 
@@ -358,5 +358,66 @@ body {
     }
     100% {
         opacity: 0;
+    }
+}
+
+.table-weather {
+    div {
+        width: 80%;
+        margin: 100px auto;
+    }
+    table {
+        perspective: 200px;
+        width: 100%;
+    }
+    th {
+        text-align: left;
+        height: 5px;
+        font-size: 20px;
+    }
+    th,
+    td {
+        padding: 26px;
+    }
+    body {
+        background-color: #05184c;
+    }
+    .z1 {
+        color: cornflowerblue;
+        background-color: #05184c;
+        ;
+    }
+    .z2 {
+        color: white;
+        transition: transform 2s;
+        transform-style: preserve-3d;
+    }
+    tr:nth-child(even) {
+        background-color: rgba(61, 61, 77, 0.56);
+    }
+    tr:nth-child(odd) {
+        background-color: rgba(61, 61, 77, 0.4);
+    }
+    td {
+        color: #9d9d9d;
+        transition: transform 1s;
+        transform-style: preserve-3d;
+    }
+    td:hover {
+        transform: translate3d(6px, 2px, 0);
+        color: black;
+        background-color: rgb(255, 255, 255);
+    }
+    .z2:hover {
+        transform: translate3d(6px, 2px, 0);
+        color: black;
+        background-color: rgb(255, 255, 255);
+    }
+    tr,
+    th {
+        cursor: pointer;
+    }
+    tr:hover {
+        background-color: rgba(255, 215, 0, 0.17);
     }
 }
