--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
       <div class="week-container">
         <label class="label-chart">Click to get details of five European cities</label>
         <ul class="week-list">
-          <li class="active" (click)="cityDetails('Rome')"><span class="day-name">Rome</span></li>
+          <li (click)="cityDetails('Rome')"><span class="day-name">Rome</span></li>
           <li (click)="cityDetails('London')"><span class="day-name">London</span></li>
           <li (click)="cityDetails('Lisbon')"><span class="day-name">Lisbon</span></li>
           <li (click)="cityDetails('Barcelona')"><span class="day-name">Barcelona</span></li>
