--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="chart">
-    <label class="chart-label">The sea level in the next 5 days at 9:00 (m MSL)</label>
+    <label class="chart-label">The sea level in the next 5 days at 9:00 AM (m MSL)</label>
     <div class="table-weather">
       <table>
         <tr>
